# phil-dioxus

./: Cargo.toml  Dioxus.toml
backend/: docker-compose.yaml
src/: main.rs  signup_form.rs
