[package]
name = "phil-dioxus"
version = "0.1.0"
authors = ["Lucas Meurer <lucasmeurer96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

web-sys = "0.3"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
